<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_hello_world"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity_name_hello_world"
        android:textSize="30sp"
    />

    <Button
        android:id="@+id/btn_hello_user"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/activity_name_hello_user"
        android:textSize="30sp"
    />

    <Button
        android:id="@+id/btn_fire"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity_name_fire"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"

        />

    <Button
        android:id="@+id/btn_square_equation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity_name_equation"
        android:textSize="30sp"
        />

</LinearLayout>